2008-08-26  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c: (mw_calendar_day_selected_cb):
	* src/storage-manager.c: (diary_storage_manager_entry_exists),
	(diary_storage_manager_entry_is_editable),
	(diary_storage_manager_set_entry):
	* src/storage-manager.h: Tidy up handling past and future diary
	entries. Past entries can now be edited, but the user is warned if the
	entries are older than a certain age.
	* src/printing.c: (print_entry): Fix printing some Pango markup.

2008-08-16  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main.c: (main): Ensure the user's data directory exists before
	creating the database file. (Closes: #543963)

2008-08-16  Philip Withnall  <philip@tecnocode.co.uk>

	* data/almanah.desktop.in:
	* src/main-window.c: (mw_about_activate_cb): Patch from Mikel
	Olasagasti <hey_neken@mundurat.net> to fix icons in the about dialogue
	and main window. (Closes: #543739)

============ Version 0.4.0

2008-07-10  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* configure.ac: Bump to version 0.4.0.
	* data/icons/16x16/Makefile.am:
	* data/icons/22x22/Makefile.am:
	* data/icons/32x32/Makefile.am:
	* data/icons/48x48/Makefile.am: Included icon SVGs in tarball.
	Updated svn:ignore lists.

2008-07-08  Philip Withnall  <philip@tecnocode.co.uk>

	* README:
	* configure.ac:
	* data/Makefile.am:
	* data/almanah.desktop.in:
	* data/almanah.ui:
	* data/diary.desktop.in:
	* data/diary.ui:
	* data/icons/16x16/Makefile.am:
	* data/icons/16x16/diary.svg:
	* data/icons/22x22/Makefile.am:
	* data/icons/22x22/diary.svg:
	* data/icons/32x32/Makefile.am:
	* data/icons/32x32/diary.svg:
	* data/icons/48x48/Makefile.am:
	* data/icons/48x48/diary.svg:
	* src/Makefile.am:
	* src/interface.c: (diary_create_interface):
	* src/main.c: (main): Changed the application name from "Diary" to
	"Almanah Diary", and the executable from "diary" to "almanah" to make
	it less generic. Some data files have moved around, orphaning the old