@@ -1,11 +1,10 @@
-2008-08-2  Djihed Afifi <djihed@gmail.com> 
+2008-08-27  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* Makefile.in.in: intltool updated
+
+2008-08-02  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Djihed Afifi.
-
-2008-07-31  Djihed Afifi <djihed@gmail.com> 
-
-	* ar.po: Added Arabic Translation.
-	* LINGUAS: Added ar.
 
 2008-07-31  Djihed Afifi <djihed@gmail.com> 
 
